# busy-beaver-stuff

./: .coveragerc  .gitattributes  .gitignore  .ruff.toml  2568.txt  4-state-machine.c  5-state-machine.c  55.txt  BB.idr  Cargo.toml  Machine.idr  Main.idr  Makefile  Parse.idr  README.md  Rado.idr  Tape.idr  Test.idr  bb5.c  bbb4.c  branch.py  c-comp-4.py  c_prog.py  check-4-2.sh  clippy.toml  decorate_graphs.py  dump_graphs.py  dump_macros.py  extensions.py  gen5.py  generate-2-3.py  generate-2-4.py  generate-3-state.py  generate-4-2.py  generate-5-2.py  generate_graphs.py  generate_graphs.sh  instr_seq.py  iso.py  just_so.py  (+26 more)
.github/workflows/: ci.yml  python-app.yml
2-3/: Makefile  generate-2-3.py  test.txt
2-4/: Makefile  generate-2-4.py  machine-2-4.c  test.txt
3-2/: Makefile  test.txt
4-2/: Makefile  machine-4-2.c  test.txt
5-2/: Makefile  machine-5-2.c  test.txt
analyze/: __init__.py  graph.py  macro.py  program.py
data/c/: 47176870.c.test
data/dot/: 32779477.dot  32779478.dot  3932964.dot
data/tree/: holdouts_24h.prog  holdouts_32q.prog  holdouts_42h.prog  holdouts_42q.prog
generate/: 2-2.py  2-3.py  2-4.py  3-2.py  4-2.py  5-2.py  __init__.py  c.py  dot.py  generate.py  graph.py  instr_seq.py  macro.py  naive.py  program.py  tree.py
graph/: dump_graphs.py  graph.py
graphs/: generate_graphs.py
idris/: BB.idr  Machine.idr  Main.idr  Makefile  Parse.idr  Program.idr  Rado.idr  Run.idr  Tape.idr  Test.idr  rado.idr
machines/: 2-2.c  2-2.test  2-3.c  2-3.test  2-4.c  2-4.test  3-2.c  3-2.test  4-2.c  4-2.test  5-2.c  5-2.test  Makefile  machine.h
machines/lin-bb3/: Makefile  expected  lin_bb3.c
machines/structured/: 1434.c  15721562.c  21.c  2315619.c  2333909.c  2819.c  31315.c  32779477.c  34.c  3932964.c  455790469742.c  455790469746.c  47176870.c  66345.c  7021292621.c  9340.c  Makefile  (+2 more)
old/: arrows.py  check-4-2.sh  connected.py  decorate_graphs.py  dump_graph.py  gen.c  generate_graphs.py  generate_graphs.sh  iso.py  ornament.py  parse_graph.py  states.py
perf/: Makefile  __init__.py  algebra.py  linrec.py  reason.py  tree.py
src/: blocks.rs  cps.rs  ctl.rs  export.rs  graph.rs  instrs.rs  lib.rs  lin_rec.rs  machine.rs  macros.rs  parse.rs  parsemod.rs  program.rs  prover.rs  reason.rs  rules.rs  segment.rs  tape.rs  test.rs  tree.rs  wrappers.rs
tapes/: 2819.txt  4096.txt
test/: lin_rec.py  machine.py  prog_data.py  test_c.py  test_code.py  test_coverage.py  test_deciders.py  test_generate.py  test_generation.py  test_graph.py  test_holdouts.py  test_lin_rado.py  test_macro.py  test_num.py  test_num.pyi  test_program.py  test_rules.py  test_slow.py  test_tape.py  test_tree.py  test_turing.py  test_utils.py  utils.py
tm/: __init__.py  blocks.py  graph.py  history.py  instrs.py  lin_rec.py  machine.py  macro.py  num.py  parse.py  program.py  prover.py  reason.py  recurrence.py  rules.py  run_bb.py  rust_stuff.pyi  show.py  tape.py  tree.py  types.py  utils.py
tools/: __init__.py  c.py  dot.py  graph.py  instr_seq.py  normalize.py  tree_norm.py
(+70 files in other folders)
