[package]
name = "rust-stuff"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rayon = "*"
num-traits = "*"
num-integer = "*"
pyo3 = { version = "*", features = ["extension-module"] }

[profile.release]
lto = true
codegen-units = 1

[profile.test]
opt-level = 3
debug-assertions = false

[profile.dev]
debug = true
incremental = true
