[workspace]
members = [
    "rust/tm",
    "rust/run",
    "rust/export",
]

resolver = "2"

[profile.dev]
debug = true
incremental = true

[profile.release]
lto = true
codegen-units = 1

[workspace.lints.rust]
unused = "deny"
warnings = "deny"
unit_bindings = "deny"
trivial_casts = "deny"
if_let_rescope = "deny"
let_underscore = "deny"
keyword_idents = "deny"
linker_messages = "deny"
unreachable_pub = "deny"
unused_lifetimes = "deny"
nonstandard_style = "deny"
unused_macro_rules = "deny"
future_incompatible = "deny"
refining_impl_trait = "deny"
redundant_lifetimes = "deny"
tail_expr_drop_order = "deny"
meta_variable_misuse = "deny"
single_use_lifetimes = "deny"
trivial_numeric_casts = "deny"
impl_trait_overcaptures = "deny"
rust_2018_compatibility = "deny"
rust_2021_compatibility = "deny"
rust_2024_compatibility = "deny"
variant_size_differences = "deny"
ambiguous_negative_literals = "deny"
impl_trait_redundant_captures = "deny"

[workspace.lints.clippy]
all = "deny"
panic = "deny"
nursery = "deny"
pedantic = "deny"
get_unwrap = "deny"
ref_patterns = "deny"
str_to_string = "deny"
clone_on_ref_ptr = "deny"
same_name_method = "deny"
allow_attributes = "deny"
unwrap_in_result = "deny"
partial_pub_fields = "deny"
unused_trait_names = "deny"
std_instead_of_core = "deny"
if_then_some_else_none = "deny"
unneeded_field_pattern = "deny"
redundant_type_annotations = "deny"
decimal_literal_representation = "deny"

enum_glob_use = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
